[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"


[project]
name = "lib-dzne-cBASE"
version = "0.1.2"
description = "Libary for aligning and comparing seqreads. "
license = { file = "LICENSE" }
authors = [{ name = "Johannes Horler", email = "johannes.horler@dzne.de" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = []
dependencies = [
    'lib-dzne-math>=0.2.3',
    'lib-dzne-seq>=0.2.2',
]
requires-python = ">=3.11"

