[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"


[project]
name = "lib_dzne_cBASE"
version = "0.2.0"
description = "Libary for aligning and comparing seqreads. "
license = { file = "LICENSE.txt" }
authors = [{ name = "Johannes", email = "johannes-programming@posteo.org" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = []
dependencies = [
    'na_quantors>=1.0',
    'lib-dzne-seq>=0.2.2',
]
requires-python = ">=3.11"

[project.urls]
Source = "https://github.com/johannes-programming/lib_dzne_cBASE"

